FieldEditabile nuova logica ALLEGATI_ACCREDITAMENTO

--- a/src/main/resources/templates/accreditamento/accreditamentoAllegatiFragment.html
+++ b/src/main/resources/templates/accreditamento/accreditamentoAllegatiFragment.html
@@ -10,8 +10,6 @@
 	<th:block th:fragment="accreditamentoAllegati(editabile)">
 
 		<!-- ogni parte non in comune tra le due sarà gestito in maniera appropriata -->
-		<th:block th:with="counter=${(editabile == true) ? (accreditamentoAllegatiWrapper.idOffset-1) : null}">
-
 			<div class="x_content">
 				<!-- rimove il tag form se il accreditamentoAllegati NON è editabile -->
 				<div class="form-horizontal form-label-left" th:remove="${!editabile} ? none : tag">
@@ -25,7 +23,6 @@
 						<th:block th:if="${editabile}">
 							<input type="hidden" name="editId" th:value="${accreditamentoAllegatiWrapper.accreditamentoId}" />
 							<input type="hidden" th:field="${accreditamentoAllegatiWrapper.idEditabili}" />
-							<input type="hidden" th:field="${accreditamentoAllegatiWrapper.idOffset}" />
 						</th:block>
 
 						<!-- allegato 1 (atto costitutivo e statuto) -->
@@ -33,7 +30,7 @@
 							<i class="fa fa-file-text"></i>
 							<a id="attoCostitutivo_esempio_link" th:text="#{label.esempio_modello}" th:href="@{|files/${accreditamentoAllegatiWrapper.attoCostitutivoModel}|}"></a>
 						</div>
-						<th:block th:include="fragments/allegati :: allegati(accreditamentoAllegatiWrapper, true, attoCostitutivo,  ${counter != null ? T(it.tredi.ecm.dao.enumlist.IdFieldEnum).getIdEcm('accreditamentoAllegati.file.attoCostitutivo') : null}, null, true, ${editabile}, true)" ></th:block>
+						<th:block th:include="fragments/allegati :: allegati(accreditamentoAllegatiWrapper, true, attoCostitutivo,  ${editabile ? 'accreditamentoAllegati.file.attoCostitutivo' : null}, null, true, ${editabile}, true)" ></th:block>
 
 						<!-- allegato 2 (esperienza formazione in ambito sanitario) -->
 						<div class="divider-dashed"></div>
@@ -41,7 +38,7 @@
 							<i class="fa fa-file-text"></i>
 							<a id="esperienzaFormazione_esempio_link" th:text="#{label.esempio_modello}" th:href="@{|files/${accreditamentoAllegatiWrapper.esperienzaFormazioneModel}|}"></a>
 						</div>
-						<th:block th:include="fragments/allegati :: allegati(accreditamentoAllegatiWrapper, true, esperienzaFormazione,  ${counter != null ? T(it.tredi.ecm.dao.enumlist.IdFieldEnum).getIdEcm('accreditamentoAllegati.file.esperienzaFormazione') : null}, null, true, ${editabile}, true)" ></th:block>
+						<th:block th:include="fragments/allegati :: allegati(accreditamentoAllegatiWrapper, true, esperienzaFormazione,  ${editabile ? 'accreditamentoAllegati.file.esperienzaFormazione' : null}, null, true, ${editabile}, true)" ></th:block>
 
 						<!-- allegato 3 (utilizzo di sedi, strutture ed attrezzature di altro soggetto) -->
 						<div class="divider-dashed"></div>
@@ -49,7 +46,7 @@
 							<i class="fa fa-file-text"></i>
 							<a id="utilizzo_esempio_link" th:text="#{label.esempio_modello}" th:href="@{|files/${accreditamentoAllegatiWrapper.utilizzoModel}|}"></a>
 						</div>
-						<th:block th:include="fragments/allegati :: allegati(accreditamentoAllegatiWrapper, true, utilizzo,  ${counter != null ? T(it.tredi.ecm.dao.enumlist.IdFieldEnum).getIdEcm('accreditamentoAllegati.file.utilizzo') : null}, null, true, ${editabile}, true)" ></th:block>
+						<th:block th:include="fragments/allegati :: allegati(accreditamentoAllegatiWrapper, true, utilizzo,  ${editabile ? 'accreditamentoAllegati.file.utilizzo' : null}, null, true, ${editabile}, true)" ></th:block>
 
 						<!-- allegato 4 (sistema informatico dedicato alla formazione in ambito sanitario) -->
 						<div class="divider-dashed"></div>
@@ -57,7 +54,7 @@
 							<i class="fa fa-file-text"></i>
 							<a id="sistemaInformatico_esempio_link" th:text="#{label.esempio_modello}" th:href="@{|files/${accreditamentoAllegatiWrapper.sistemaInformaticoModel}|}"></a>
 						</div>
-						<th:block th:include="fragments/allegati :: allegati(accreditamentoAllegatiWrapper, true, sistemaInformatico,  ${counter != null ? T(it.tredi.ecm.dao.enumlist.IdFieldEnum).getIdEcm('accreditamentoAllegati.file.sistemaInformatico') : null}, null, true, ${editabile}, true)" ></th:block>
+						<th:block th:include="fragments/allegati :: allegati(accreditamentoAllegatiWrapper, true, sistemaInformatico,  ${editabile ? 'accreditamentoAllegati.file.sistemaInformatico' : null}, null, true, ${editabile}, true)" ></th:block>
 
 						<!-- allegato 5 (piano di qualità) -->
 						<div class="divider-dashed"></div>
@@ -65,7 +62,7 @@
 							<i class="fa fa-file-text"></i>
 							<a id="pianoQualita_esempio_link" th:text="#{label.esempio_modello}" th:href="@{|files/${accreditamentoAllegatiWrapper.pianoQualitaModel}|}"></a>
 						</div>
-						<th:block th:include="fragments/allegati :: allegati(accreditamentoAllegatiWrapper, true, pianoQualita,  ${counter != null ? T(it.tredi.ecm.dao.enumlist.IdFieldEnum).getIdEcm('accreditamentoAllegati.file.pianoQualita') : null}, null, true, ${editabile}, true)" ></th:block>
+						<th:block th:include="fragments/allegati :: allegati(accreditamentoAllegatiWrapper, true, pianoQualita,  ${editabile ? 'accreditamentoAllegati.file.pianoQualita' : null}, null, true, ${editabile}, true)" ></th:block>
 
 						<!-- allegato 6 (dichiarazione del legale rappresentante) -->
 						<div class="divider-dashed"></div>
@@ -73,7 +70,7 @@
 							<i class="fa fa-file-text"></i>
 							<a id="dichiarazioneLegale_esempio_link" th:text="#{label.esempio_modello}" th:href="@{|files/${accreditamentoAllegatiWrapper.dichiarazioneLegaleModel}|}"></a>
 						</div>
-						<th:block th:include="fragments/allegati :: allegati(accreditamentoAllegatiWrapper, true, dichiarazioneLegale,  ${counter != null ? T(it.tredi.ecm.dao.enumlist.IdFieldEnum).getIdEcm('accreditamentoAllegati.file.dichiarazioneLegale') : null}, null, true, ${editabile}, true)" ></th:block>
+						<th:block th:include="fragments/allegati :: allegati(accreditamentoAllegatiWrapper, true, dichiarazioneLegale,  ${editabile ? 'accreditamentoAllegati.file.dichiarazioneLegale' : null}, null, true, ${editabile}, true)" ></th:block>
 
 						<!-- allegato 7 (dichiarazione esclusione) -->
 						<div class="divider-dashed"></div>
@@ -81,12 +78,11 @@
 							<i class="fa fa-file-text"></i>
 							<a id="dichiarazioneEsclusione_esempio_link" th:text="#{label.esempio_modello}" th:href="@{|files/${accreditamentoAllegatiWrapper.dichiarazioneEsclusioneModel}|}"></a>
 						</div>
-						<th:block th:include="fragments/allegati :: allegati(accreditamentoAllegatiWrapper, true, dichiarazioneEsclusione,  ${counter != null ? T(it.tredi.ecm.dao.enumlist.IdFieldEnum).getIdEcm('accreditamentoAllegati.file.dichiarazioneEsclusione') : null}, null, true, ${editabile}, false)" ></th:block>
+						<th:block th:include="fragments/allegati :: allegati(accreditamentoAllegatiWrapper, true, dichiarazioneEsclusione,  ${editabile ? 'accreditamentoAllegati.file.dichiarazioneEsclusione' : null}, null, true, ${editabile}, false)" ></th:block>
 
 					</form>
 				</div>
 			</div>
-		</th:block>
 	</th:block>
 </body>
 </html>
